--- a/LoveYou.html
+++ b/LoveYou.html
@@ -93,8 +93,8 @@
                 transform: scale(0.6) rotate(-45deg);
             }
         }
-        @media (max-width:900px) {
-            p {
+        @media only screen and (max-width: 768px) {
+            .name p {
                 font-size: 50px;
             }
         }
